<resources>
    <string name="app_name">mocAPP</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="next">Next</string>
    <string name="redo">Redo</string>
    <string name="analyse">Analyse</string>
    <string name="cancel">Cancel</string>
    <string name="prompt_hold_to_record_video">Hold to record a video</string>
    <string name="previous">Previous</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Feed</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_add">Add</string>
    <string name="title_activity_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="prompt_user">Username</string>
    <string name="prompt_server_address">Server Address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_or_register">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_exists">"User already exists"</string>
    <string name="network_error">Network error</string>
    <string name="error">Error</string>
    <string name="search_server">Search server in local network</string>
    <string name="searching_for_server">Searching server…</string>
    <string name="server_not_found">Server not found.</string>
    <string name="server_found">Server discovered.</string>
    <string name="video_upload_success">Video successfully uploaded</string>
    <string name="send">Send</string>
    <string name="work_title">Working Title</string>
    <string name="title_user">User</string>
    <string name="upload_video_from_gallery">Upload from gallery</string>
    <string name="record_video">Record video</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="source_video">Source Video</string>
    <string name="output_video">Output Video</string>
    <string name="operations">Operations</string>


    <string name="onboarding_1_title">Welcome!</string>
    <string name="onboarding_1_text">Hey! With this app you can easily create Motion Capturing data from videos. The cloud will take care of the analysis.</string>

    <string name="onboarding_2_title">How it works</string>
    <string name="onboarding_2_text">Just take a video and upload it! Always make sure that the people you record are fully visible. </string>

    <string name="onboarding_3_title">That\'s it!</string>
    <string name="onboarding_3_text">Now it\'s time to experiment.</string>
    <string name="no_posts">No posts</string>
    <string name="no_posts_detail">No posts with given filter criteria were found…</string>
    <string name="no_jobs">No jobs</string>
    <string name="no_jobs_detail">There are no jobs right now. Go ahead and create one!</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="three_d">3D View</string>
    <string name="share">Share</string>
    <string name="delete_dialog_message">The job has failed, do you want to delete it?</string>
    <string name="delete_dialog_title">Job failed</string>
    <string name="delete">Delete</string>
    <string name="post">Post</string>
    <string name="share_to_pc">Send to software</string>
    <string name="lorem_ipsum_long">"Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. "</string>
    <string name="collections">Collections</string>
    <string name="title">Give a title</string>
    <string name="description">Describe your job</string>
    <string name="add_tag">Add tag</string>
    <string name="string_public">Public</string>
    <string name="bookmark">Bookmark</string>
    <string name="no_items">No Items</string>
    <string name="no_items_detail">You have not saved anything into your collection yet</string>
    <string name="title_bookmarks">Bookmarks</string>
</resources>