<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_output_video">

    <fragment
            android:id="@+id/navigation_source_video"
            android:name="de.jannis_jahr.motioncapturingapp.ui.detail.DetailSourceVideo"
            android:label="@string/source_video"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/navigation_output_video"
            android:name="de.jannis_jahr.motioncapturingapp.ui.detail.DetailOutputVideo"
            android:label="@string/output_video"
            tools:layout="@layout/fragment_dashboard"/>

    <fragment
            android:id="@+id/navigation_operations"
            android:name="de.jannis_jahr.motioncapturingapp.ui.detail.DetailOperations"
            android:label="@string/operations"
            tools:layout="@layout/fragment_user"/>

</navigation>